<resources>
    <string-array name="categories">
        <item>Verktøy</item>
        <item>Elektronikk</item>
        <item>Instrument</item>
        <item>Klær</item>
        <item>Sko</item>
        <item>Bøker</item>
        <item>Sport og Villmark</item>
        <item>Multimedia</item>
        <item>Diverse</item>
    </string-array>

    <string name="app_name">LåneLitt</string>
    <string name="my_assets">Mine Eiendeler</string>

    <string name="not_signed_in">Ikke logget inn</string>
    <string name="search">Søk</string>
    <string name="search_result">Søkeresultat</string>

    <string name="asset">Eiendel</string>
    <string name="shoes">Sko</string>
    <string name="clothes">Klær</string>
    <string name="tools">Verktøy</string>
    <string name="el">Elektronikk</string>
    <string name="instrument">Instrument</string>
    <string name="books">Bøker</string>
    <string name="sport">Sport Villmark</string>
    <string name="media">Multimedia</string>
    <string name="div">Diverse</string>

    <string name="send_loan_request_pop">Send forespørsel</string>
    <string name="loan_request_popup_window">Velg ønsket tidspunkt for lån:</string>
    <string name="from_date">Fra dato</string>
    <string name="to_date">Til dato</string>
    <string name="send_request_item">SEND</string>

    <string name="LaaneLitt">LåneLitt</string>
    <string name="login_logo">LåneLitt</string>
    <string name="name">Navn</string>
    <string name="description">Beskrivelse</string>
    <string name="my_profile">Min profil</string>
    <string name="settings">Innstillinger</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_">PROFIL</string>
    <string name="phone">Telefonnummer</string>
    <string name="profileImg">Profilbilde</string>
    <string name="logout_">LOGG UT</string>
    <string name="about_">OM</string>
    <string name="no_description">Ingen beskrivelse</string>

    <string name="password">Password</string>
    <string name="email">Epost</string>
    <string name="login">Logg inn</string>
    <string name="new_user">Ny bruker</string>

    <string name="preference_file_key">prefKey</string>
    <string name="saved_userId_key">savedUserId</string>
    <string name="asset_name">Eiendelnavn</string>
    <string name="asset_img">AssetImage</string>
    <string name="about_us">Om oss</string>
    <string name="new_asset">Legg til ny eiendel</string>
    <string name="edit">Endre</string>
    <string name="save">Lagre</string>
    <string name="delete">Slett</string>
    <string name="delete_profile">Slett profil</string>
    <string name="firstname">Fornavn</string>
    <string name="middlename">Mellomnavn</string>
    <string name="lastname">Etternavn</string>
    <string name="update">Oppdater</string>
    <string name="new_password">Nytt passord</string>
    <string name="confirm_password">Bekreft passord</string>
    <string name="change_name">Endre navn</string>
    <string name="change_email">Endre epost</string>
    <string name="change_profile_img">Endre profilbilde</string>
    <string name="change_password">Endre passord</string>
    <string name="register">Registrer ny bruker</string>
    <string name="title">Tittel</string>
    <string name="home">Hjem</string>
    <string name="add_asset">Legg til</string>
    <string name="profile">Profil</string>
    <string name="addimage">addImage</string>
    <string name="takepicture">takePicture</string>
    <string name="deny">deny</string>
    <string name="accept">Godta</string>
    <string name="accept_terms">Jeg aksepterer brukervilkårene</string>
    <string name="close">Lukk</string>
    <string name="decline">Avslå</string>
    <string name="alert_title">Låneforespørsel</string>
    <string name="alert_text">Text</string>
    <string name="notifications">Varsler</string>
    <string name="zipcode">Postnummer</string>
    <string name="change_zipcode">Endre postnummer</string>
    <string name="cancel">Kanseller</string>
    <string name="image">Bilde</string>
    <string name="image_of_the_asset_owner">Image of the asset owner</string>
    <string name="bilde">Bilde</string>
    <string name="sport_og_villmark">Sport og villmark</string>

</resources>