<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--https://medium.com/@freedom.chuks7/how-to-use-jet-pack-components-bottomnavigationview-with-navigation-ui-19fb120e3fb9-->
    <item android:id="@+id/homePageFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:id="@+id/notificationsFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_24"/>

    <item android:id="@+id/addAssetFragment"
        android:title="@string/add_asset"
        android:icon="@drawable/ic_add"/>

    <item android:id="@+id/myAssetsListFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>