<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editViewModel"
            type="com.laanelitt.laanelittapp.profile.settings.editname.EditNameViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".profile.settings.editname.EditNameFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:layout_marginTop="96dp"
                android:hint="@string/firstname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{editViewModel.loggedInUser.firstname}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_0dp"
                android:layout_height="@dimen/height_btn"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="@dimen/margin_top_S"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:hint="@string/lastname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{editViewModel.loggedInUser.lastname}"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/edit_name_btn"
                android:layout_width="@dimen/width_0dp"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="@dimen/margin_top_S"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:text="@string/update"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_lastname" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>