<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".notification.NotificationFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/popup_window_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popup_window_background_container"
                android:layout_width="250dp"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/popup_window_title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMaxTextSize="24dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/title"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/popup_window_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/description"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/buttons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageButton
                        android:id="@+id/accept"
                        android:layout_width="@dimen/buttonHeight"
                        android:layout_height="@dimen/buttonHeight"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/accept"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_check_24"
                        android:tint="@color/colorPrimary" />

                    <ImageButton
                        android:id="@+id/deny"
                        android:layout_width="@dimen/buttonHeight"
                        android:layout_height="@dimen/buttonHeight"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/deny"
                        android:padding="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_close_24"
                        android:tint="@color/colorRed" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>